product detail functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,36 +26,19 @@
             <div class="landing__hero-overlay"></div>
             <div class="nav">
                 <div class="nav__logo">
-                    <img src="./img/earthenwares-langing-logo.png" alt="" class="nav-logo">
+                    <img src="./img/LOGO-SVG.svg" alt="" class="nav-logo">
                 </div>
-                <div class="nav__navigation">
-                    <div class="nav__top"> <!-- Remember display none on this -->
-                        <div class="nav__btn">
-                            <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
-                            <button class="nav-back">Go Back</button>
-                        </div>
-                        <div class="nav__btn">
-                            <button class="nav-back">Post a Listing</button>
-                            <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
-                        </div>
-                    </div>
-                    <div class="nav__bottom">
-                        <ul class="nav__ul">
-                            <div class="nav__back">
-                                <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
-                                <button class="nav-back">Go Back</button>
-                            </div>
-                            <li class="nav-li">Home</li>
-                            <li class="nav-li">Collection</li>
-                            <li class="nav-li">About Us</li>
-                        </ul>
-                        <a class="nav__btn" href="./profile.html">
-                            <button class="nav-btn">User Profile</button>
-                            <i class="fa-solid fa-bag-shopping nav-fa-landing"></i>
-                        </a>
-                    </div>
-                </div>
+                <ul class="nav__ul">
+                    <a href="index.html"><li class="nav-li">Home</li></a>
+                    <a href="shop-products-profile.html"><li class="nav-li">Collection</li></a>
+                    <li class="nav-li">About Us</li>
+                </ul>
+                <a class="nav__btn" href="./profile.html">
+                    <button class="nav-btn">User Profile</button>
+                    <i class="fa-solid fa-bag-shopping nav-fa-landing"></i>
+                </a>
             </div>
+
             <div class="landing__intro">
                 <div class="landing__intro-header">
                     <h1 class="landing__intro-heading">Pottery is <div class="landing__intro-rotate landing__intro-rotate-1">
