--- a/frontend/products.html
+++ b/frontend/products.html
@@ -62,8 +62,8 @@
                 <h1 class="title">SHOP COLLECTION</h1>
             </div>
 
-            <div class="products-container">
-                <div class="card">
+            <div class="products-container" id="shopContainer">
+                <div class="cards">
                     <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
                     <div class="card-body">
                       <div class="card-body-top">
@@ -76,7 +76,7 @@
                     </div>
                   </div>
 
-                  <div class="card">
+                  <div class="cards">
                     <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
                     <div class="card-body">
                       <div class="card-body-top">
@@ -89,7 +89,7 @@
                     </div>
                   </div>
 
-                  <div class="card">
+                  <div class="cards">
                     <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
                     <div class="card-body">
                       <div class="card-body-top">
@@ -101,20 +101,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card">
-                    <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
-                    <div class="card-body">
-                      <div class="card-body-top">
-                          <p class="card-name">Item Name</p>
-                          <p class="card-price">$34</p>
-                      </div>
-                      <div class="card-body-bottom">
-                          <p class="card-artist">Jane Doe</p>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="card">
+                  <div class="cards">
                     <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
                     <div class="card-body">
                       <div class="card-body-top">
@@ -127,7 +114,20 @@
                     </div>
                   </div>
 
-                  <div class="card">
+                  <div class="cards">
+                    <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
+                    <div class="card-body">
+                      <div class="card-body-top">
+                          <p class="card-name">Item Name</p>
+                          <p class="card-price">$34</p>
+                      </div>
+                      <div class="card-body-bottom">
+                          <p class="card-artist">Jane Doe</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="cards">
                     <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
                     <div class="card-body">
                       <div class="card-body-top">
