--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -45,25 +45,25 @@
 
         <div class="secondary-nav">
             <div class="secondary-nav__logo">
-                <img src="./img/green-logo.png" alt="" class="secondary-nav-logo">
+                <img src="./img/LOGO-GREEN-SVG.svg" alt="" class="secondary-nav-logo">
             </div>
-            <div class="secondary-nav__navigation">
-                <div class="secondary-nav__top"> <!-- Remember display none on this -->
-                    <!-- <div class="secondary-nav__btn secondary-nav__go-back" id="goBackProfileBtn">
+            <!-- <div class="secondary-nav__navigation">
+                <div class="secondary-nav__top">
+                    <div class="secondary-nav__btn">
                         <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
                         <button class="secondary-nav-back">Go Back</button>
-                    </div> -->
+                    </div>
                     <div class="secondary-nav__btn">
                         <button class="secondary-nav-back">Post a Listing</button>
                         <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
                     </div>
                 </div>
-                <div class="secondary-nav__bottom">
+                <div class="secondary-nav__bottom"> -->
                     <ul class="secondary-nav__ul">
-                        <div class="secondary-nav__back secondary-nav__back-arrow" id="goBackProfileBtn">
+                        <!-- <div class="secondary-nav__back" id="productBackBtn">
                             <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
                             <button class="secondary-nav-back">Go Back</button>
-                        </div>
+                        </div> -->
                         <a href="index.html"><li class="secondary-nav-li">Home</li></a>
                         <li class="secondary-nav-li">Collection</li>
                         <li class="secondary-nav-li">About Us</li>
@@ -72,11 +72,10 @@
                         <button class="secondary-nav-btn">User Profile</button>
                         <i class="fa-solid fa-bag-shopping secondary-nav-fa-landing"></i>
                     </div>
-                </div>
-            </div>
+                <!-- </div>
+            </div> -->
             
         </div>
-       
         <!-- end of nav -->
 
         <!-- Delete Product Modal Flow Begins -->
