--- a/frontend/shop-products-profile.html
+++ b/frontend/shop-products-profile.html
@@ -23,9 +23,9 @@
 
         <div class="secondary-nav">
             <div class="secondary-nav__logo">
-                <img src="./img/green-logo.png" alt="" class="secondary-nav-logo">
+                <img src="./img/LOGO-GREEN-SVG.svg" alt="" class="secondary-nav-logo">
             </div>
-            <div class="secondary-nav__navigation">
+            <!-- <div class="secondary-nav__navigation">
                 <div class="secondary-nav__top">
                     <div class="secondary-nav__btn">
                         <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
@@ -36,7 +36,7 @@
                         <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
                     </div>
                 </div>
-                <div class="secondary-nav__bottom">
+                <div class="secondary-nav__bottom"> -->
                     <ul class="secondary-nav__ul">
                         <div class="secondary-nav__back" id="productBackBtn">
                             <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
@@ -50,8 +50,8 @@
                         <button class="secondary-nav-btn">User Profile</button>
                         <i class="fa-solid fa-bag-shopping secondary-nav-fa-landing"></i>
                     </div>
-                </div>
-            </div>
+                <!-- </div>
+            </div> -->
             
         </div>
         <!-- end of nav -->
@@ -85,16 +85,16 @@
                             <div class="care-title">
                                 <h6>PRODUCT CARE</h6>
                             </div>
-                            <button class="care-drop-down"><i class="fa-solid fa-angle-down"></i></button>
+                            <button class="care-drop-down" id="careDropDown"><i class="fa-solid care-down fa-angle-down"></i><i class="fa-solid care-up fa-angle-up"></i></button>
                         </div>
                         <div class="product-care-info">
                             <p class="care-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perspiciatis maiores commodi sed assumenda est accusamus dolorem ut consectetur debitis?</p>
                         </div>
-                        <div class="product-shipping">
+                        <div class="product-shipping" >
                             <div class="shipping-title">
                                 <h6>SHIPPING INFORMATION </h6>
                             </div>
-                            <button class="shipping-drop-down"><i class="fa-solid fa-angle-down"></i></button>
+                            <button class="shipping-drop-down" id="shippingDropDown"><i class="fa-solid shipping-down fa-angle-down"></i><i class="fa-solid shipping-up fa-angle-up"></i></button>
                         </div>
                         <div class="product-shipping-info">
                             <p class="shipping-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perspiciatis maiores commodi sed assumenda est accusamus dolorem ut consectetur debitis?</p>
@@ -103,7 +103,7 @@
                             <div class="purchase-title">
                                 <h6>PAYMENT AND REFUND POLICY</h6>
                             </div>
-                            <button class="purchase-drop-down"><i class="fa-solid fa-angle-down"></i></button>
+                            <button class="purchase-drop-down" id="paymentDropDown"><i class="fa-solid purchase-down fa-angle-down"></i><i class="fa-solid purchase-up fa-angle-up"></i></button>
                         </div>
                         <div class="product-purchase-info">
                             <p class="purchase-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet perspiciatis maiores commodi sed assumenda est accusamus dolorem ut consectetur debitis?</p>
