sign up buttons hide/show based on whether user is signing up as seller

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -307,18 +307,18 @@
                             <p for="">Will you be selling your work?</p>
                             <div class="form__input form__radio-box">
                                 <div class="form__radio">
-                                    <input class="form-radio" type="radio" name="signUpSeller" value="yes" id="testClick">
+                                    <input class="form-radio" type="radio" name="signUpSeller" value="yes" id="yesSellerRadio">
                                     <label class="form__radio-header" for="yes">yes</label>
                                 </div>                    
                                 <div class="form__radio">
-                                    <input class="form-radio" type="radio" name="signUpSeller" value="no">
+                                    <input class="form-radio" type="radio" name="signUpSeller" value="no" id="noSellerRadio">
                                     <label class="form__radio-header" for="no">no</label>
                                 </div>
                             </div>
                             </div>
                             <div class="form__btns">
-                                <button class="signup-btn form-btn" id="signUpBtn">Sign Up</button>
-                                <button class="signup-btn form-btn" id="signUpBtnCont" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Proceed to Store Registration</button>
+                                <button class="signup-btn form-btn hide" id="signUpBtn">Sign Up</button>
+                                <button class="signup-btn form-btn hide" id="signUpBtnCont" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Proceed to Store Registration</button>
                             </div>
                         </div>
                     </div>
