--- a/frontend/shop-products-profile.html
+++ b/frontend/shop-products-profile.html
@@ -54,6 +54,22 @@
                         <button class="secondary-nav-btn">User Profile</button>
                         <i class="fa-solid fa-bag-shopping secondary-nav-fa-landing"></i>
                     </div>
+
+                    <div class="mobile-menu">
+                        <i class="fa-solid fa-bars hamburger-nav" id="hamburgerNav"></i>
+                        <i class="fa-solid fa-bag-shopping nav-fa-landing hamburger-bag"></i>
+                    </div>
+                    
+                    <div class="hamburger-menu">
+                        <ul class="hamburger__ul">
+                            <a href="index.html"><li class="nav-li">Home</li></a>
+                            <a href="shop-products-profile.html"><li class="nav-li">Collection</li></a>
+                            <li class="nav-li">About Us</li>
+                        </ul>
+                        <a class="hamburger__btn" href="./profile.html">
+                            <button class="nav-btn">User Profile</button>
+                        </a>
+                    </div>
                 <!-- </div>
             </div> -->
             
