--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,14 @@
 
         <section class="landing__hero">
             <div class="landing__hero-overlay"></div>
+
+            <div class="secondary-nav__top" id="postListing">
+                <a href="upload-product.html"><div class="secondary-nav__btn" >
+                    <button class="secondary-nav-post">Post a Listing</button>
+                    <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
+                </div></a>
+            </div>
+
             <div class="nav">
                 <div class="nav__logo">
                     <img src="./img/LOGO-SVG.svg" alt="" class="nav-logo">
