--- a/frontend/shop-products-profile.html
+++ b/frontend/shop-products-profile.html
@@ -21,22 +21,18 @@
 
     <body>
 
+        <div class="secondary-nav__top" id="postListing">
+            <a href="upload-product.html"><div class="secondary-nav__btn" >
+                <button class="secondary-nav-post">Post a Listing</button>
+                <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
+            </div></a>
+        </div>
+
         <div class="secondary-nav">
             <div class="secondary-nav__logo">
                 <img src="./img/LOGO-GREEN-SVG.svg" alt="" class="secondary-nav-logo">
             </div>
-            <!-- <div class="secondary-nav__navigation">
-                <div class="secondary-nav__top">
-                    <div class="secondary-nav__btn">
-                        <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
-                        <button class="secondary-nav-back">Go Back</button>
-                    </div>
-                    <div class="secondary-nav__btn">
-                        <button class="secondary-nav-back">Post a Listing</button>
-                        <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
-                    </div>
-                </div>
-                <div class="secondary-nav__bottom"> -->
+
                     <ul class="secondary-nav__ul">
                         <div class="secondary-nav__back hide" id="productBackBtn">
                             <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
