--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -43,6 +43,13 @@
         </div>
 
 
+        <div class="secondary-nav__top" id="postListing">
+            <a href="upload-product.html"><div class="secondary-nav__btn" >
+                <button class="secondary-nav-post">Post a Listing</button>
+                <i class="fa-solid fa-circle-plus nav-fa-landing"></i>
+            </div></a>
+        </div>
+        
         <div class="secondary-nav">
             <div class="secondary-nav__logo">
                 <img src="./img/LOGO-GREEN-SVG.svg" alt="" class="secondary-nav-logo">
@@ -64,9 +71,9 @@
                             <i class="fa-solid fa-arrow-left-long nav-fa-landing"></i>
                             <button class="secondary-nav-back">Go Back</button>
                         </div> -->
-                        <a href="index.html"><li class="secondary-nav-li">Home</li></a>
-                        <a class="secondary-nav-li" href="./shop-products-profile.html">Collection</a>
-                        <li class="secondary-nav-li">About Us</li>
+                        <a href="index.html"><li class="nav-li">Home</li></a>
+                        <a href="shop-products-profile.html"><li class="nav-li">Collection</li></a>
+                        <li class="nav-li">About Us</li>
                     </ul>
                     <div class="secondary-nav__btn">
                     </div>
