--- a/frontend/shop-products-profile.html
+++ b/frontend/shop-products-profile.html
@@ -358,7 +358,7 @@
                 </div>
             </div>
 
-            <!-- Modal for comments starts -->
+            <!-- Modal for add comments starts -->
             <div class="modal fade" id="commentModal" aria-hidden="true" aria-labelledby="exampleModalToggleLabel7" tabindex="-1">
                 <div class="modal-dialog modal-dialog-centered modal-xl">
                   <div class="modal-content">
@@ -391,8 +391,72 @@
                 </div>
                 </div>
               </div>
+            <!-- Modal for add comments ends -->
 
-            <!-- Modal for comments ends -->
+            <!-- Comment added Successfully Modal Starts -->
+
+          <div class="modal fade" id="exampleModalToggle8" aria-hidden="true" aria-labelledby="exampleModalToggleLabel6" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered modal-xl">
+              <div class="modal-content">
+                  <div class="modal__background">
+                <div class="modal-header">
+                  <!-- <h5 class="modal-title" id="exampleModalToggleLabel2">Modal 2</h5> -->
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="modal-body">
+                        <div class="modal-heading">
+                            <p class="modal-subtitle">Comment Added Successfully</p>
+                        </div>
+                        <div class="delete">
+                            <div class="delete__btns">
+                                <button class="delete-btn-alt" data-bs-dismiss="modal" aria-label="Close">Okay</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                  <div class="form__footer"></div>
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+          <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle8" role="button">Add Comment</a>
+
+        <!-- Comment added successfully Modal Ends -->
+
+        <!-- Alert Modal Starts -->
+
+        <div class="modal fade" id="exampleModalToggle9" aria-hidden="true" aria-labelledby="exampleModalToggleLabel6" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content">
+                    <div class="modal__background">
+                <div class="modal-header">
+                    <!-- <h5 class="modal-title" id="exampleModalToggleLabel2">Modal 2</h5> -->
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="modal-body">
+                        <div class="modal-heading">
+                            <p class="modal-subtitle">Please enter all details</p>
+                        </div>
+                        <div class="delete">
+                            <div class="delete__btns">
+                                <button class="delete-btn-alt" data-bs-dismiss="modal" aria-label="Close">Okay</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <div class="form__footer"></div>
+                </div>
+                </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Alert Modal Ends -->
 
         </section>
         <!-- product details end -->
